Bug 2000066: Truncate and expand notes in tab hover preview r=sthompson,emilio,fluent-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D278343

UltraBlame original commit: 32407891b4e359bd35827a9aaeccd03d9694d5f8

--- a/browser/themes/shared/tabbrowser/tab-hover-preview.css
+++ b/browser/themes/shared/tabbrowser/tab-hover-preview.css
@@ -17,8 +17,6 @@
 
 .tab-preview-title {
   overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   font-weight: var(--heading-font-weight);
 }
@@ -38,8 +36,6 @@
 
 .tab-preview-thumbnail-container {
   width: 264px;
-  border: 1px solid var(--border-color-deemphasized);
-  border-radius: var(--border-radius-medium);
   margin: 0 auto var(--space-small);
   overflow: hidden;
 
@@ -53,12 +49,10 @@
     display: block;
     width: 100%;
     animation: tab-hover-preview-fadein 0.2s ease;
+    border: 1px solid var(--border-color-deemphasized);
+    border-radius: var(--border-radius-medium);
+    box-sizing: border-box;
   }
-}
-
-.tab-note-text-container:not(:empty) {
-  font: menu;
-  margin: 0 var(--space-large) var(--space-large);
 }
 
 .tab-preview-add-note {
@@ -68,6 +62,57 @@
 
   &[hidden] {
     display: none;
+  }
+}
+
+.tab-preview-note-container {
+  font: menu;
+  position: relative;
+  margin: 0 var(--space-large) var(--space-large);
+
+  &[hidden] {
+    display: none;
+  }
+}
+
+.tab-preview-note-text {
+  overflow-wrap: break-word;
+
+  #tab-preview-panel:not([note-expanded]) & {
+    /* Set by Javascript */
+    --tab-note-expand-toggle-width: 0;
+
+    --gradient-width: 40px;
+    --gradient-offset: 10px;
+
+    overflow: hidden;
+    -webkit-line-clamp: 10;
+
+    mask:
+      /* Mask 1: make all lines except the last visible (by default,
+       * unmasked portions of an element are invisible, which is why
+       * this is needed) */
+      linear-gradient(black, black) 0 0 / 100% calc(100% - 1lh) no-repeat,
+      /* Mask 2: Fade out the end of the last line */
+        linear-gradient(
+          90deg,
+          black calc(100% - var(--tab-note-expand-toggle-width) - var(--gradient-width) - var(--gradient-offset)),
+          transparent calc(100% - var(--tab-note-expand-toggle-width) - var(--gradient-offset))
+        )
+        0 100% / 100% 1lh no-repeat;
+  }
+}
+
+.tab-preview-note-expand {
+  display: none;
+  text-decoration: underline;
+  cursor: pointer;
+  position: absolute;
+  inset-block-end: 0;
+  inset-inline-end: 0;
+
+  #tab-preview-panel[note-overflow]:not([note-expanded]) & {
+    display: block;
   }
 }
 
